fix alignment of badge for shoppingicon

--- a/client/src/components/Topbar.scss
+++ b/client/src/components/Topbar.scss
@@ -11,9 +11,6 @@
     border-radius: 20px;
     background-color: white;
     border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
 }
 .shoppingCartContainer {
@@ -27,6 +24,8 @@
     width: 1.5em;
     height: 1.5em;
     background-color: lightsalmon;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
